--- a/portada.html
+++ b/portada.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Page Title</title>
 </head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <h1>My First Heading</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo molestiae temporibus inventore. Molestiae, quo eos
+        enim facilis porro soluta beatae nulla amet iste possimus dolorem ab nisi fuga nesciunt magnam?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo molestiae temporibus inventore. Molestiae, quo eos
+        enim facilis porro soluta beatae nulla amet iste possimus dolorem ab nisi fuga nesciunt magnam?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo molestiae temporibus inventore. Molestiae, quo eos
+        enim facilis porro soluta beatae nulla amet iste possimus dolorem ab nisi fuga nesciunt magnam?</p>
+
 
 </body>
-</html> 
+
+</html>
